--- a/Redone-Code-for- SkillsLab/css/stylesheet.css
+++ b/Redone-Code-for- SkillsLab/css/stylesheet.css
@@ -104,6 +104,8 @@ footer{
 	float:left;
 	margin-right:20px;
 	margin-bottom:20px;
+  width: 600px;
+  height: 345px
 }
 .home {
 background-color: #1a1a2b;
@@ -128,6 +130,9 @@ background-color: #1a1a2b;
 .video{
   margin-top: 20px;
   margin-left: 20px;
+    width: 600px; 
+    height: 345px; 
+    z-index: -100;
 }
 .hobbiesHeader{
   font-size: 30px;
@@ -137,4 +142,9 @@ input:focus {
 }
 textarea:focus {
  background-color: #b5b5b5;  
+}
+iframe {
+  width:600
+  height:400
+  border:0;
 }
